# src/pages/home/model/home-model.ts
@@ -1,14 +1,27 @@
 import { $selectedRequestId } from '@/entities/advertisement/';
 import { $selectedCompany } from '@/entities/company';
-import { $searchQS } from '@/pages/my-requests';
+import { $isAuthorized } from '@/entities/session';
+import { $searchQS, requestClicked } from '@/pages/my-requests';
 import { $api } from '@/shared/api';
+import { $qwepApi } from '@/shared/api/api';
 import type { Item, Offer, Order } from '@/shared/api/generated/Api';
+import { appMounted } from '@/shared/model';
 import { toast } from '@/shared/ui/toast';
-import { createMutation } from '@farfetched/core';
+import { createMutation, createQuery } from '@farfetched/core';
 import { createEffect, createEvent, sample } from 'effector';
 
 export const itemBuyed = createEvent<Item>();
 export const offerBuyed = createEvent<Offer>();
+
+const getVendors = createQuery({
+  handler: () => $qwepApi.vendors.getVendors(),
+});
+
+sample({
+  clock: [appMounted, $isAuthorized, requestClicked],
+  filter: $isAuthorized,
+  target: getVendors.start,
+});
 
 const createOffer = createMutation({
   handler: (data: Offer) => $api.offers.createOffer(data),
@@ -19,18 +32,29 @@ const createOrder = createMutation({
 });
 
 sample({
-  source: { $selectedRequestId, $selectedCompany, $searchQS },
+  source: {
+    $selectedRequestId,
+    $selectedCompany,
+    $searchQS,
+    vendors: getVendors.$data,
+  },
   clock: itemBuyed,
   fn: (src, clk) =>
     Object.assign(
       {
         name: clk.title,
-        delivery_time: clk.parsedDelivery,
         amount: parseInt(clk.quantity?.value ?? '0'),
         price: parseInt(clk.price?.value ?? '0'),
         bid: src.$selectedRequestId ?? 1,
+        vendor:
+          src.vendors?.data.find((v) =>
+            v.qwep_vendors?.find((qv) => qv.title === clk.vendorTitle),
+          )?.id ?? 1,
       },
       src.$selectedCompany?.id && { company: src.$selectedCompany.id },
+      clk.parsedDelivery && {
+        delivery_time: clk.parsedDelivery,
+      },
     ) as Offer,
   target: createOffer.start,
 });
